--- a/src/styles.css
+++ b/src/styles.css
@@ -35,15 +35,17 @@
     position: relative;
     overflow:hiddend;
     width: 100%;
-    height: 50%;
+    height: 40%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    margin-top: 2%;
    }
    .upper-data img{
     position: absolute;
     top:0;
     left:0;
     width: 100%;
+    height:100%;
    }
    .weather-data{
     position :relative;
